fix: fix visibillity of cart btn

--- a/src/assets/scss/layouts/header.scss
+++ b/src/assets/scss/layouts/header.scss
@@ -62,7 +62,7 @@
 .basket-btn {
   padding: 1px 13px;
 
-  display: flex;
+  display: flex !important;
   align-items: center;
 
   border-radius: 29px;
